not-helm/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: todo-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-demo-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: todo-demo-app
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: todo-demo-app
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext: {}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'quay.io/takinosh/todo-demo-app:v1'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: todo-demo-app
      serviceAccount: todo-demo-app
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
