not-helm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-demo-app
  namespace: todo-demo-app
  labels:
    app.kubernetes.io/instance: todo-demo-app
    app.kubernetes.io/name: todo-demo-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: todo-demo-app
